force-app/main/default/objects/OrderItem/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <description>Created by SF support for testing</description>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>