force-app/main/default/objects/OrderItem/fields/CancelNetUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CancelNetUnitPrice__c</fullName>
    <description>SC-3441 staging field. Asset-net seed for cancellation/negative-quantity lines. Written into the pricing context by CancelLineNetSeedPrehook (from AssetActionSource.NetUnitPrice); consumed by the cancel-seed AssignmentElement to set NetUnitPrice on cancel lines. Not user-edited.</description>
    <inlineHelpText>System: asset net price staged for a cancellation line.</inlineHelpText>
    <label>Cancel Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>