force-app/main/default/objects/OrderItem/fields/COLA_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>COLA_Uplift_Percent__c</fullName>
    <label>COLA Uplift Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>