force-app/main/default/objects/OrderItem/fields/COLACalculatedPrice__c.field-meta.xml
<CustomField>
    <fullName>COLACalculatedPrice__c</fullName>
    <description>Mirror of QuoteLineItem.COLACalculatedPrice__c for Context Definition pricing resolution.</description>
    <label>COLACalculatedPrice</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>