force-app/main/default/objects/OrderItem/fields/Fortra_Product_Type__c.field-meta.xml
<CustomField>
        <fullName>Fortra_Product_Type__c</fullName>
        <label>Fortra Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fortra_Product_Type</valueSetName>
        </valueSet>
    </CustomField>