force-app/main/default/objects/OrderItem/fields/Maintenance_Discount_Percent__c.field-meta.xml
<CustomField>
        <fullName>Maintenance_Discount_Percent__c</fullName>
        <label>Maintenance Discount Percent</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>