force-app/main/default/objects/OrderItem/fields/Partner_Pricing_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Pricing_Source__c</fullName>
    <description>Indicates how the partner pricing was set: System Calculated or Manual Override.</description>
    <inlineHelpText>How was this partner price determined?</inlineHelpText>
    <label>Partner Pricing Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>