force-app/main/default/objects/OrderItem/fields/Prior_Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Discretionary_Discount__c</fullName>
    <description>Maintenance (derived) pricing: the discretionary (software) discount on this maintenance order line expressed as a DOLLAR amount, persisted at order creation so a future renewal can carry it forward and uplift by COLA. FORTRA-PRODUCT-018.</description>
    <inlineHelpText>Discretionary discount on the maintenance order line in dollars; read by the renewal Flow as the prior-period value.</inlineHelpText>
    <label>Prior Discretionary Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>