force-app/main/default/objects/OrderItem/fields/Prior_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Partner_Discount__c</fullName>
    <description>Maintenance (derived) pricing: the partner discount on this maintenance order line expressed as a DOLLAR amount, persisted at order creation so a future renewal can carry it forward and uplift by COLA. FORTRA-PRODUCT-018.</description>
    <inlineHelpText>Partner discount on the maintenance order line in dollars; read by the renewal Flow as the prior-period value.</inlineHelpText>
    <label>Prior Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>