force-app/main/default/objects/OrderItem/fields/Source_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Source_List_Price__c</fullName>
    <description>Source license list price copied from Quote Line Item for derived maintenance order line pricing. Read by Rev_Mgmt Derived Pricing Formula during order repricing.</description>
    <inlineHelpText>List price of the contributing license product, copied from the quote line during Q2O conversion.</inlineHelpText>
    <label>Source List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>